--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-be real fake
+<html>
+  <head>
+       <script>
+         window.location.replace("https://instagram.com")
+       </script>
+  </head>
+  <body>
+    be real fake
+  </body>
+</html>
